--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
         </div>
     </nav>
 
-    <div class="max-w-4xl mx-auto mt-8 px-4">
-        <div class="bg-gray-800 rounded p-6">
-            <h2 class="text-2xl font-bold py-2"><a href="./articles/gics-stats.html">2024 尋找資安女婕思記分板分析</a></h2>
-            <p class="text-lg text-gray-400">另一種方面的打比賽(?</p>
+	<div class="min-h-screen">
+		<div class="max-w-4xl mx-auto mt-8 px-4">
+			<div class="bg-gray-800 rounded p-6">
+				<h2 class="text-2xl font-bold py-2"><a href="./articles/gics-stats.html">2024 尋找資安女婕思記分板分析</a></h2>
+				<p class="text-lg text-gray-400">另一種方面的打比賽(?</p>
+			</div>
 		</div>
-    </div>
 
-	<div class="max-w-4xl mx-auto mt-8 px-4">
-        <div class="bg-gray-800 rounded p-6">
-            <h2 class="text-2xl font-bold py-2"><a href="./articles/not-flag.html">這個不是 flag</a></h2>
+		<div class="max-w-4xl mx-auto mt-8 px-4">
+			<div class="bg-gray-800 rounded p-6">
+				<h2 class="text-2xl font-bold py-2"><a href="./articles/not-flag.html">這個不是 flag</a></h2>
+			</div>
 		</div>
-    </div>
-
-    <footer class="bg-gray-600 py-4 text-white text-center mt-8">
+	</div>
+    <footer class="bg-gray-600 py-4 text-white text-center mt-8 sticky bottom-0">
         <a class="text-blue-300" href="https://github.com/idkidkidkidkidkidkidkidk/idkidkidkidkidkidkidkidk.github.io">Source</a>
         <p class="text-gray-400">請無視 Commit 時間</p>
     </footer>
